--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prebuild": "run-p clean:build test:ci",
     "build": "webpack --config webpack.config.prod.js",
     "postbuild": "run-p serve:build",
-    "serve:build": "http-server ./build"
+    "serve:build": "http-server ./build -p 3000"
   },
   "repository": {
     "type": "git",
@@ -91,7 +91,8 @@
     "webpack": "5.74.0",
     "webpack-bundle-analyzer": "4.4.2",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "3.11.2"
+    "webpack-dev-server": "3.11.2",
+    "workbox-webpack-plugin": "^6.5.4"
   },
   "engines": {
     "node": ">=8"
