integrate with MUI

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "echo-transcript",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Echo Transcript",
   "scripts": {
     "start": "run-p start:dev",
@@ -46,6 +46,9 @@
     }
   },
   "dependencies": {
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.9",
     "bootstrap": "5.0.2",
     "immer": "9.0.5",
     "prop-types": "15.7.2",
