--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prebuild": "run-p clean:build test:ci",
     "build": "webpack --config webpack.config.prod.js",
     "postbuild": "run-p serve:build",
-    "serve:build": "http-server ./build -p 3000"
+    "serve:build": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -76,6 +76,7 @@
     "eslint-loader": "4.0.2",
     "eslint-plugin-import": "2.23.4",
     "eslint-plugin-react": "7.24.0",
+    "express": "^4.18.2",
     "fetch-mock": "9.11.0",
     "html-webpack-plugin": "5.3.2",
     "http-server": "0.12.3",
