--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
+    "axios": "^1.3.4",
     "bootstrap": "5.0.2",
     "immer": "9.0.5",
     "prop-types": "15.7.2",
