--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Echo Transcript",
   "scripts": {
     "start": "run-p start:dev",
-    "start:dev": "webpack serve --config webpack.config.dev.js --port 3000",
+    "start:dev": "webpack serve --config webpack.config.dev.js --port 8080",
     "test": "jest --watch",
     "test:ci": "jest",
     "clean:build": "rimraf ./build && mkdir build",
     "prebuild": "run-p clean:build test:ci",
     "build": "webpack --config webpack.config.prod.js",
     "postbuild": "run-p serve:build",
-    "serve:build": "http-server ./build -p 3000"
+    "serve:build": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -49,6 +49,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
+    "axios": "^1.3.4",
     "bootstrap": "5.0.2",
     "immer": "9.0.5",
     "prop-types": "15.7.2",
@@ -76,6 +77,7 @@
     "eslint-loader": "4.0.2",
     "eslint-plugin-import": "2.23.4",
     "eslint-plugin-react": "7.24.0",
+    "express": "^4.18.2",
     "fetch-mock": "9.11.0",
     "html-webpack-plugin": "5.3.2",
     "http-server": "0.12.3",
