--- a/package.json
+++ b/package.json
@@ -49,9 +49,14 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
+    "auth0-js": "^9.20.1",
+    "auth0-lock": "^12.0.2",
     "axios": "^1.3.4",
     "bootstrap": "5.0.2",
+    "express-jwt": "^8.4.1",
+    "express-jwt-auth": "^0.0.6",
     "immer": "9.0.5",
+    "jwks-rsa": "^3.0.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -72,6 +77,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "5.2.6",
     "cssnano": "5.0.6",
+    "dotenv-webpack": "^8.0.1",
     "enzyme": "3.11.0",
     "eslint": "7.30.0",
     "eslint-loader": "4.0.2",
