--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.4",
   "description": "Echo Transcript",
   "scripts": {
-    "start": "run-p start:dev",
+    "start": "run-p start:dev start:api",
     "start:dev": "webpack serve --config webpack.config.dev.js --port 8080",
+    "start:api": "node tools/apiServer.js",
     "test": "jest --watch",
     "test:ci": "jest",
     "clean:build": "rimraf ./build && mkdir build",
@@ -53,6 +54,7 @@
     "auth0-lock": "^12.0.2",
     "axios": "^1.3.4",
     "bootstrap": "5.0.2",
+    "dotenv": "^16.0.3",
     "express-jwt": "^8.4.1",
     "express-jwt-auth": "^0.0.6",
     "immer": "9.0.5",
