--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "jwks-rsa": "^3.0.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
+    "react-charts": "^3.0.0-beta.54",
     "react-dom": "17.0.2",
     "react-redux": "7.2.4",
     "react-router-dom": "5.2.0",
