--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.4",
   "description": "Echo Transcript",
   "scripts": {
-    "start": "run-p start:dev",
+    "start": "run-p start:dev start:api",
     "start:dev": "webpack serve --config webpack.config.dev.js --port 8080",
+    "start:api": "node tools/apiServer.js",
     "test": "jest --watch",
     "test:ci": "jest",
     "clean:build": "rimraf ./build && mkdir build",
@@ -49,11 +50,18 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
+    "auth0-js": "^9.20.1",
+    "auth0-lock": "^12.0.2",
     "axios": "^1.3.4",
     "bootstrap": "5.0.2",
+    "dotenv": "^16.0.3",
+    "express-jwt": "^8.4.1",
+    "express-jwt-auth": "^0.0.6",
     "immer": "9.0.5",
+    "jwks-rsa": "^3.0.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
+    "react-charts": "^3.0.0-beta.54",
     "react-dom": "17.0.2",
     "react-redux": "7.2.4",
     "react-router-dom": "5.2.0",
@@ -72,6 +80,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "5.2.6",
     "cssnano": "5.0.6",
+    "dotenv-webpack": "^8.0.1",
     "enzyme": "3.11.0",
     "eslint": "7.30.0",
     "eslint-loader": "4.0.2",
