--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "dotenv": "^16.0.3",
     "express-jwt": "^8.4.1",
     "express-jwt-auth": "^0.0.6",
+    "express-jwt-authz": "^2.4.1",
     "immer": "9.0.5",
     "jwks-rsa": "^3.0.1",
     "prop-types": "15.7.2",
