--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
+    "@xenova/transformers": "^2.5.3",
     "auth0-js": "^9.20.1",
     "auth0-lock": "^12.0.2",
     "axios": "^1.3.4",
