--- a/package.json
+++ b/package.json
@@ -50,16 +50,19 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
+    "@opendocsg/pdf2md": "^0.1.27",
     "auth0-js": "^9.20.1",
     "auth0-lock": "^12.0.2",
     "axios": "^1.3.4",
     "bootstrap": "5.0.2",
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
     "express-jwt": "^8.4.1",
     "express-jwt-auth": "^0.0.6",
     "express-jwt-authz": "^2.4.1",
     "immer": "9.0.5",
     "jwks-rsa": "^3.0.1",
+    "multer": "^1.4.5-lts.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-charts": "^3.0.0-beta.54",
@@ -69,7 +72,8 @@
     "react-toastify": "7.0.4",
     "redux": "4.1.0",
     "redux-thunk": "2.3.0",
-    "reselect": "4.0.0"
+    "reselect": "4.0.0",
+    "turndown": "^7.1.2"
   },
   "devDependencies": {
     "@babel/core": "7.14.6",
