--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "express-jwt-authz": "^2.4.1",
     "immer": "9.0.5",
     "jwks-rsa": "^3.0.1",
+    "markdown-to-jsx": "^7.4.5",
     "multer": "^1.4.5-lts.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
